make sure slider aligns with standard chart (with give for slider handles)

--- a/app/assets/stylesheets/graphs_rickshaw.css
+++ b/app/assets/stylesheets/graphs_rickshaw.css
@@ -9,6 +9,8 @@
 .slider {
        display: inline-block;
         margin-left: 40px;
+	margin-top: 10px;
+	padding-left: 15px;
 }
 .chart {
        display: inline-block;
